Error Mitigation/MagiCoder/Data/org_omg_CosNaming_NamingContextPackage/org_omg_CosNaming_NamingContextPackageOutputResult.txt
Sample: NotFoundHolder_8
----------------------------------------------------------------
output:
./Data/org_omg_CosNaming_NamingContextPackage/javaFiles/NotFoundHolder_8.java:1: error: package org.omg.CORBA.portable does not exist
import org.omg.CORBA.portable.InputStream;
                             ^
./Data/org_omg_CosNaming_NamingContextPackage/javaFiles/NotFoundHolder_8.java:2: error: package org.omg.CORBA.portable does not exist
import org.omg.CORBA.portable.OutputStream;
                             ^
./Data/org_omg_CosNaming_NamingContextPackage/javaFiles/NotFoundHolder_8.java:3: error: package org.omg.CosNaming.NamingContextPackage does not exist
import org.omg.CosNaming.NamingContextPackage.NotFoundHolder;
                                             ^
./Data/org_omg_CosNaming_NamingContextPackage/javaFiles/NotFoundHolder_8.java:7: error: cannot find symbol
        NotFoundHolder holder = new NotFoundHolder();
        ^
  symbol:   class NotFoundHolder
  location: class NotFoundHolder_8
./Data/org_omg_CosNaming_NamingContextPackage/javaFiles/NotFoundHolder_8.java:7: error: cannot find symbol
        NotFoundHolder holder = new NotFoundHolder();
                                    ^
  symbol:   class NotFoundHolder
  location: class NotFoundHolder_8
./Data/org_omg_CosNaming_NamingContextPackage/javaFiles/NotFoundHolder_8.java:8: error: cannot find symbol
        InputStream inputStream = new InputStream(); // Assume this is a valid InputStream
        ^
  symbol:   class InputStream
  location: class NotFoundHolder_8
./Data/org_omg_CosNaming_NamingContextPackage/javaFiles/NotFoundHolder_8.java:8: error: cannot find symbol
        InputStream inputStream = new InputStream(); // Assume this is a valid InputStream
                                      ^
  symbol:   class InputStream
  location: class NotFoundHolder_8
7 errors


================================================================

